--- a/index.html
+++ b/index.html
@@ -1,4 +1,18 @@
-<html> </html>
-<head> 
-    <h1>My first lecture</h1>
+<html>
+
+</html>
+
+
+<head>
+    <title>My Title</title>
 </head>
+
+<body>
+    <h1>My Name</h1>
+    <p> <b> Wasim khalil</b></p>
+    <h2>Qualifications</h2>
+    <p> <b> BBA (hons)</b></p>
+    <h3>My Goals in My Life</h3>
+    <p> I wanted to become a <i style="color: red">Full Stack Developer</i></p>
+  
+</body>
