--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
 <body>
     <h1>My Name</h1>
     <p> <b> Wasim khalil</b></p>
+    <h1>Name</h1>
+    <p> My name is <b> Wasim khalil</b></p>
     <h2>Qualifications</h2>
     <p> <b> BBA (hons)</b></p>
+    <p> I have done <b>BBA (hons)</b> from <i style="color: red"> Poonch University</i></p>
     <h3>My Goals in My Life</h3>
     <p> I wanted to become a <i style="color: red">Full Stack Developer</i></p>
+    <p> I want to become a <i style="color: red">Full Stack Developer</i></p>
   
 </body>
