--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <p> I have done <b>BBA (hons)</b> from <i style="color: red"> Poonch University</i></p>
     <h3>My Goals in My Life</h3>
     <p> I wanted to become a <i style="color: red">Full Stack Developer</i></p>
+    <p> I have done <strong> BBA (hons)</strong> from <i style="color: red"> Poonch University</i></p>
+    <h3>My Goals in Life</h3>
     <p> I want to become a <i style="color: red">Full Stack Developer</i></p>
-  
 </body>
